Hot-fix: align pokemon type to center

--- a/8th week Pokedex/style.css
+++ b/8th week Pokedex/style.css
@@ -32,14 +32,15 @@ body {
 }
 .card {
   background-color: white;
-  border-radius: 2%;
+  border-radius: 5%;
   width: 150px;
   height: 230px;
 }
 .card-img {
-  max-width: 150px;
-  max-height: 150px;
+  width: 150px;
+  height: 150px;
   background-color: white;
+  border-radius: 5%;
 }
 .card-title {
   background-color: blue;
@@ -47,7 +48,17 @@ body {
 }
 .card-type {
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
+  padding: 2px;
+  color: black;
+}
+.card-type-item {
+  width: fit-content;
+  display: inline-block;
+  padding: 2px;
+  border-radius: 5px;
+  width: 57px;
+  text-align: center;
 }
 .grass {
   background-color: green;
