--- a/8th week To-do list app/style.css
+++ b/8th week To-do list app/style.css
@@ -3,18 +3,17 @@
   margin: 0;
   box-sizing: border-box;
 }
-html {
-  scroll-behavior: smooth;
-}
+
 body {
-  display: grid;
-  grid-template-columns: 30vw auto;
   font-size: 20px;
 }
 .left-bar {
   background-color: orangered;
-  height: 100vh;
+  height: 100%;
   padding-left: 20px;
+  position: fixed;
+  overflow: auto;
+  width: 25%;
 }
 .left-bar-fix {
   border-bottom: 1px solid black;
@@ -27,14 +26,27 @@ body {
   position: absolute;
   bottom: 30px;
 }
-
+.top-nav {
+  border-bottom: 2px dotted green;
+  display: grid;
+  grid-template-columns: 80% 20%;
+}
 .logo {
   font-size: 50px;
-  border-bottom: 2px dotted green;
+}
+.welcome {
+  padding-top: 30px;
+  text-align: end;
+}
+.clock {
+  position: absolute;
+  top: 10px;
+  right: 30px;
 }
 
 .mid-section {
   padding: 50px;
+  margin-left: 25%;
 }
 .task-list {
   padding-top: 30px;
@@ -59,4 +71,12 @@ button {
 }
 .del-button {
   background-color: red;
+}
+.tag {
+  display: inline-block;
+  font-style: italic;
+  background-color: aqua;
+  width: fit-content;
+  border-radius: 5px;
+  padding: 2px;
 }
